--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,12 +1,19 @@
 ---
-layout: archive
+layout: page
 title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+## Lecturer, McGill University (2019-2020)
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+* Microeconomic Analysis and Applications (ECON 208)
+* Environmental Economics (ECON 225)
+
+## Teaching Assistant, McGill University (2014-2020)
+
+* Economic Statistics (2018-2019 academic year, 3 semesters)
+* Political Economy of Trade Policy (Winter 2017)
+* Environmental Economics (2015-2017 academic year, 5 semesters)
+* Microeconomic Analysis and Applications (Winter 2016)
+* Economics of Climate Change (2014-2015 academic year, 3 semesters)
